--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "HomeLauncher",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite dev\" \"node api\"",
+    "dev": "vite dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
