--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/google", "destination": "/api/google.js" },
-    { "source": "/test", "destination": "/api/test.js" }
+    { "source": "/google", "destination": "/api/routes/google.js" },
+    { "source": "/test", "destination": "/api/routes/test.js" }
   ]
 }
