--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.1",
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mathjs": "^14.4.0",
     "pocketbase": "^0.26.0"
   }
 }
