--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
+    "formidable": "^3.5.3",
     "mathjs": "^14.4.0",
     "pocketbase": "^0.26.0",
     "react": "^18.3.1",
