moved setting handling from backend to frontend to save myself the pain

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,6 @@
   "rewrites": [
     { "source": "/google", "destination": "/api/routes/google.js" },
     { "source": "/math", "destination": "/api/routes/math.js" },
-    { "source": "/currency", "destination": "/api/routes/currency.js" },
-    { "source": "/register", "destination": "/api/routes/register.js" },
-    { "source": "/settings", "destination": "/api/routes/settings.js" },
-    { "source": "/background", "destination": "/api/routes/background.js" }
+    { "source": "/currency", "destination": "/api/routes/currency.js" }
   ]
 }
