--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "formidable": "^3.5.3",
     "mathjs": "^14.4.0",
