--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pocketbase": "^0.26.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "translate": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
